gtk/Tahoe-Dark/gtk-4.0/gtk.css
/* ... */
.tweak-titlebar-left > box,
.tweak-titlebar-right > box {
  background-color: rgba(0, 0, 0, 0);
  border: none;
  border-top-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0);
  border-bottom-color: rgba(0, 0, 0, 0);
  border-left-color: rgba(0, 0, 0, 0);
  box-shadow: none;
}

box {
  border: none;
  border-top-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0);
  border-bottom-color: rgba(0, 0, 0, 0);
  border-left-color: rgba(0, 0, 0, 0);
  box-shadow: none;
}

stack.background {
  background-color: rgba(0, 0, 0, 0);
}

box.split-row.vertical {
  border-radius: 0;
  border-bottom-color: rgba(0, 0, 0, 0.2);
}

leaflet.unfolded > separator.horizontal {
  opacity: 0;
}

leaflet.unfolded > box.vertical list.navigation-sidebar {
  background-color: transparent;
  background-image: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0.1),
    rgba(255, 255, 255, 0.03)
  );
  box-shadow: inset 2px 2px 4px -3px rgba(255, 255, 255, 0.6),
    inset -2px -2px 4px -3px rgba(255, 255, 255, 0.6);
}

leaflet.unfolded > box.vertical > searchbar box {
  background-color: transparent;
}

/*********************
 * weather *
 *********************/

scrolledwindow.card.forecast-card {
  margin-left: 12px;
  margin-right: 12px;
}

monthcell:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

/*********************
 * Mission Center *
 *********************/

columnview.rich-list.view {
  background-color: rgba(0, 0, 0, 0);
  background-image: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0.1),
    rgba(255, 255, 255, 0.03)
  );
  box-shadow: inset 2px 2px 4px -2.8px rgba(255, 255, 255, 0.6),
    inset -2px -2px 4px -2.8px rgba(255, 255, 255, 0.6);
}

/*
 toolbarview.undershoot-top {
  background-color: rgba(0, 0, 0, 0);
  background-image: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0.1),
    rgba(255, 255, 255, 0.03)
  );
  box-shadow: inset 2px 2px 4px -3.2px rgba(255, 255, 255, 0.6),
    inset -2px -2px 4px -3.2px rgba(255, 255, 255, 0.6);
 }
 */

/*********************
 * Photos APP *
 *********************/

/*
 revealer.bottom-bar {
  border-radius: 9999px;
  background-color: rgba(0, 0, 0, 0);
  background-image: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0.1),
    rgba(255, 255, 255, 0.03)
  );
  box-shadow: inset 2px 2px 4px -3.2px rgba(255, 255, 255, 0.6),
    inset -2px -2px 4px -3.2px rgba(255, 255, 255, 0.6);

 }
 */

/*********************
 * Photos APP *
 *********************/

row.expander,
row.expander > row.activatable.header {
  border-radius: 0;
  border-bottom-color: rgba(255, 255, 255, 0.2);
}

/*********************
 * Settings *
 *********************/

button.background-preview-button.toggle:checked {
  border-radius: 30px;
}

button.background-preview-button.toggle > background-preview > picture {
  border-radius: 28px;
}

/*********************
 * Extensions *
 *********************/

header.horizontal.top > tabs > tab:checked,
header.horizontal.top > tabs > tab:hover {
  box-shadow: none;
  background-color: rgba(255, 255, 255, 0.15);
}

header.horizontal.top > tabs > tab {
  margin-left: -4px;
  margin-right: 8px;
}

notebook.frame > stack {
  background-color: transparent;
}

notebook.frame > stack > list {
  background-color: rgba(255, 255, 255, 0.6);
}

/*********************
 * Cartridges *
 *********************/

overlay.large > button#cover_button {
  border-radius: 20px;
  min-width: 22px;
}

overlay.large
  > revealer.right.top
  > menubutton.circular.osd.popup
  button.image-button.toggle {
  margin-right: 1px;
}

/*********************
 * Dissent *
 *********************/

notebook.login-methods > header.horizontal.top {
  border: none;
  padding-bottom: 12px;
}

notebook.login-methods > stack {
  background-color: transparent;
  padding-bottom: 12px;
}

headerbar.login-page-header,
headerbar.login-page-header > windowhandle {
  background-color: transparent;
  border: 0px solid rgba(0, 0, 0, 0);
}

picture.onlineimage.thumbnail-embed-image,
button.flat.thumbnail-embed {
  border-radius: 20px;
}

window headerbar {
  background-color: transparent;
}

overlay-split-vew.window-chatpage
  > widget.sidebar-pane
  > box.horizontal.sidebar-sidebar
  > box.sidebar-guildside.vertical
  > windowcontrols.start {
  margin-top: 10px;
}

box.horizontal.user-bar {
  margin-right: 17px;
}

popover.emoji-picker > box.emoji-searchbar > entry.search {
  min-height: 100px;
}

list.message-list > row,
textview.md-textblock {
  border-radius: 0;
}

overlay-split-vew.window-chatpage
  > windowhandle
  > box.end.horizontal
  > button.image-button.toggle {
  margin-right: -4px;
}

